[package]
name = "ash"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.101"
eframe = { version = "0.27", default-features = false, features = ["wgpu"] }
egui = "0.27"
iced = "0.14.0"
oauth2 = { version = "4", default-features = false, features = ["reqwest"] }
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls"] }
rusqlite = { version = "0.31", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
tiny_http = "0.12.0"
tokio = { version = "1.37", default-features = false, features = ["rt", "macros"] }
url = "2.5.8"
open = "5"
image = "0.24"
serde_json = "1.0.149"
